# git-pr

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: rust.yml
scripts/: bundle.sh  ci.sh  release.sh
src/: gitpr.rs  main.rs
tests/: HEAD_A  HEAD_BROKEN  PR_EDITMSG  test.rs
