[package]
name = "git-pr"
version = "0.1.0"
authors = ["jafow <jared.a.fowler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "git-pr"

[dependencies]
surf = "1.0.3"
async-std = "1.2.0"
regex = "1.3.1"
lazy_static = "1.4.0"
serde_json = "1.0.44"

[dependencies.clap]
version = "2.33.0"
default-features = false
